src/sass/_components.scss
@use "./base";

// Header
.header {
  &__logo {
    display: flex;
    align-items: center;
    gap: 1.6rem;
    & img {
      width: 6.8rem;
      height: 6.8rem;
    }
  }
  &__heading {
    font-size: 4.2rem;
    text-transform: uppercase;
    font-family: var(--font-secondary);
    line-height: 1;
    margin-top: 0.6rem;
  }
}

// Sidebar
.sidebar {
  &__category {
    margin-bottom: 1.6rem;
  }
}

// Fact List
.fact-list {
  overflow: scroll;
  padding-bottom: 4rem;
  &__fact {
    font-size: 2rem;
    line-height: 1.4;
    background-color: var(--color-app-fact-background);

    margin-bottom: 1.6rem;
    padding: 1.6rem 2.4rem;
    letter-spacing: -0.1rem;
    border-radius: 1.6rem;

    display: flex;
    align-items: center;
    gap: 2.4rem;

    & .source:link,
    .source:visited {
      color: var(--color-link);
      text-decoration: none;
      margin-left: 1.2rem;
      transition: 0.3s;
    }

    & .source:hover,
    .source:active {
      color: var(--color-link-hover-active);
    }

    @media only screen and (max-width: base.$bp-medium) {
      flex-direction: column;
      align-items: flex-end;
      gap: 1.2rem;
    }
  }

  &__tag {
    text-transform: uppercase;
    font-size: 1.4rem;
    font-family: var(--font-secondary);
    padding-top: 0.3rem;
    padding-left: 1rem;
    padding-right: 1rem;
    border-radius: 10rem;
  }

  &__vote-buttons {
    margin-left: auto;
    flex-shrink: 0;
    display: flex;
    gap: 0.8rem;

    & button {
      border: none;
      background-color: --color-vote-button-background;
      font-size: 1.8rem;
      padding: 0.6rem 1.2rem;
      border-radius: 10rem;
      color: #44403c;
      font-family: inherit;
      font-weight: 600;
      cursor: pointer;
      transition: 0.3s;

      &:hover {
        background-color: var(--color-vote-hover);
        color: inherit;
      }
      &:disabled {
        background-color: var(--color-vote-hover);
        color: inherit;
      }
    }
  }
}

// Buttons
.btn {
  border: none;
  font-family: var(--font-secondary);
  line-height: 1;
  text-transform: uppercase;
  font-size: 1.7rem;
  padding: 1.6rem 0 1.3rem;
  background-image: linear-gradient(135deg, #3b82f6, #ef4444, #16a34a, #eab308);
  color: inherit;
  border-radius: 10rem;
  cursor: pointer;
  transition: 0.3s;

  &:hover {
    transform: scale(110%) rotate(-2deg);
  }
}

.btn-large {
  font-size: 2rem;
  padding: 2rem 3.2rem 1.7rem;
}

.btn-all-categories {
  margin-bottom: 1.6rem;
  width: 100%;
}

.btn-category {
  width: 100%;
  background-image: none;
}

// Form
.fact-form {
  background-color: var(--color-app-fact-background);
  margin-bottom: 4rem;
  padding: 1.6rem 3.2rem;
  display: flex;
  align-items: center;
  gap: 1.6rem;
  border-radius: 1.6rem;
  transition: all 0.5s;

  @media only screen and (max-width: base.$bp-medium2) {
    flex-direction: column;
    align-items: stretch;
  }

  &__input,
  &__select {
    width: 22rem;
    background-color: var(--color-vote-button-background);
    border: none;
    border-radius: 10rem;
    padding: 1.6rem;
    font-size: 1.8rem;
    color: inherit;
    font-family: inherit;

    &::placeholder {
      color: var(--color-link);
    }
    &:first-child {
      flex-grow: 1;
    }

    @media only screen and (max-width: base.$bp-medium2) {
      width: auto;
    }
  }

  & span {
    font-weight: 600;
    font-size: 1.8rem;
    margin-right: 1.8rem;
  }
}

// Hidden class for form:

.hidden {
  display: none;
  // visibility: hidden;
  // opacity: 0;
  // overflow: hidden;
  // transition: opacity 0.5s ease-out;
  // height: 0;
}

// Loading Message:
.message {
  text-align: center;
  text-transform: uppercase;
  font-size: 3.6rem;
  font-weight: 600;
  margin-top: 2.4rem;
  background-image: linear-gradient(
    135deg,
    #3b82f6 20%,
    #ef4444 30%,
    #16a34a 40%,
    #eab308 50%,
    #ffc927 60%
  );
  background-clip: text;
  color: transparent;
}

// Disputed Flag
.disputed {
  color: #ef4444;
  font-weight: 600;
  margin-right: 1rem;
}

